--- a/public/hover.html
+++ b/public/hover.html
@@ -120,7 +120,7 @@
 </head>
 <body class="overflow-x-hidden bg-[rgb(49,49,49)]">
     <nav class="navba fixed top-0 text-white flex justify-between items-center p-4 w-screen z-50 duration-300" id="nvbar">
-        <img class="relative top-0 left-0 w-[70px] h-[50px]" src="images/logo.png" alt="">
+        <a href="./hover.html"><img class="relative top-0 left-0 w-[70px] h-[50px] hover:cursor-pointer" src="images/logo.png" alt=""></a>
         <div class="flex gap-10 font-medium">
             <a class="niv" href="">Home</a>
             <a class="niv" href="">About</a>
