--- a/public/sing_up.html
+++ b/public/sing_up.html
@@ -44,7 +44,6 @@
                     <div class="mt-3 ">
                         <input type="email" placeholder="Email" id="cv" class="test_email placeholder:text-white text-white border-white py-1 px-2 w-full bg-transparent rounded-[30px] focus:outline-offset-0 focus:border-transparent focus:outline-[#EBDD36]" name="Email">
                     </div>
-                    <!--      -->
                     <div id="errrrror" class="email_exist bg-red-200 mt-2 rounded-[30px]">
                         <p class="text-red-400 ml-2">Email already exist</p>
                     </div>
@@ -66,7 +65,7 @@
                         <button type="submit" name="signup" id="signbutt"    class="   w-full bg-[#EBDD36] hover:bg-yellow-400 py-2 text-center text-white rounded-lg font-semibold">Sign up </button>
                       </div>
                       <div class="mt-2">
-                        <span class="text-white px-10">I already have an accout <a href="./sign_in.html" class="text-[#EBDD36] font-semibold hover:underline">Sign in</a></span>
+                        <span class="text-white px-10">I already have an accout <a href="./sign_in.php" class="text-[#EBDD36] font-semibold hover:underline">Sign in</a></span>
                       </div>
                 </div>
             </form>
